<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="1dp">

    <RelativeLayout
        android:id="@+id/header"
        android:background="@drawable/el_widget_skin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="1dp"
        android:layout_alignParentTop="true">

        <TextView android:id="@+id/actorName"
            android:paddingLeft="5dp"
            android:gravity="left"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>


        <TextView android:id="@+id/actorTime"
                  android:paddingRight="5dp"
                  android:gravity="right"
                  android:layout_height="wrap_content"
                  android:layout_width="wrap_content"
                  android:layout_alignParentRight="true" />
    </RelativeLayout>

    <!--<RelativeLayout-->
        <!--android:id="@+id/chatToolBar"-->
        <!--android:padding="2dp"-->
        <!--android:layout_marginBottom="1dp"-->
        <!--android:background="@drawable/el_widget_skin"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_above="@+id/footer">-->

        <!--<EditText-->
            <!--android:layout_height="40dp"-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_toRightOf="@+id/viewSwitcher"-->
            <!--android:layout_marginRight="2dp"/>-->

        <!--<ImageButton-->
            <!--android:id="@+id/chatButton"-->

            <!--android:background="@drawable/el_widget_skin"-->
            <!--android:layout_height="40dp"-->
            <!--android:layout_width="40dp"-->
            <!--android:layout_gravity="right"-->
            <!--android:layout_alignParentRight="true"/>-->


    <!--</RelativeLayout>-->

    <LinearLayout
        android:id="@+id/footer"
        android:background="@drawable/el_widget_skin"
        android:padding="2dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_alignParentBottom="true">

        <el.android.widgets.ELProgressBar
            android:id="@+id/healthBar"
            android:layout_marginLeft="0dp"
            android:layout_width="80dp"
            android:layout_height="13dp"
            color="#FF0000"
            showText="true"/>

        <el.android.widgets.ELProgressBar
            android:id="@+id/manaBar"
            android:layout_marginLeft="0dp"
            android:layout_width="80dp"
            android:layout_height="13dp"
            showText="true"
            color="#00FF00"/>

        <el.android.widgets.ELProgressBar
            android:id="@+id/foodBar"
            android:layout_marginLeft="0dp"
            android:layout_width="80dp"
            android:layout_height="13dp"
            showText="true"
            color="#FFD800"/>


        <el.android.widgets.ELProgressBar
            android:id="@+id/emuBar"
            android:layout_marginLeft="0dp"
            android:layout_width="80dp"
            android:layout_height="13dp"
            showText="true"
            color="#FFFF5500"/>
    </LinearLayout>

    <LinearLayout
        android:layout_above="@id/footer"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/header"
        android:gravity="right">

        <el.android.widgets.ViewFlipperFixed
            android:id="@+id/flipper"
            android:background="@drawable/el_widget_skin"
            android:inAnimation="@android:anim/slide_in_left"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:layout_marginRight="1dp"
            android:paddingTop="2dp"
            android:paddingLeft="2dp"
            android:gravity="left"
            android:layout_weight="1">

            <el.android.widgets.ConsoleView
                android:id="@+id/console"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                />

            <el.android.widgets.mapview.MapView
                android:id="@+id/map"
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                />
        </el.android.widgets.ViewFlipperFixed>

        <RelativeLayout
            android:id="@+id/toolbar"
            android:orientation="vertical"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:background="@drawable/el_widget_skin"
            android:gravity="right"
            android:layout_height="fill_parent"
            android:layout_width="50dp">

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="8dp"
                android:orientation="vertical">

                <el.android.widgets.ItemView
                    android:id="@+id/fastInventory1"
                    android:layout_height="35dp"
                    android:layout_width="35dp"
                    android:layout_marginTop="4dp"/>

                <el.android.widgets.ItemView
                    android:id="@+id/fastInventory2"
                    android:layout_height="35dp"
                    android:layout_width="35dp"
                    android:layout_marginTop="4dp"/>

                <el.android.widgets.ItemView
                    android:id="@+id/fastInventory3"
                    android:layout_height="35dp"
                    android:layout_width="35dp"
                    android:layout_marginTop="4dp"/>

                <el.android.widgets.ItemView
                    android:id="@+id/fastInventory4"
                    android:layout_height="35dp"
                    android:layout_width="35dp"
                    android:layout_marginTop="4dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="4dp">

                <ImageButton
                    android:id="@+id/sit_down"
                    android:layout_height="42dp"
                    android:layout_width="42dp"
                    android:background="@drawable/sit_down"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="4dp"
                    android:contentDescription="@string/manufacture" />

                <ImageButton
                    android:id="@+id/manufacture"
                    android:layout_height="42dp"
                    android:layout_width="42dp"
                    android:background="@drawable/manu"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="4dp"
                    android:contentDescription="@string/manufacture" />

                <ImageButton
                    android:id="@+id/inventory"
                    android:layout_height="42dp"
                    android:layout_width="42dp"
                    android:background="@drawable/inventory"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="4dp"
                    android:contentDescription="@string/inventory" />

                <ImageButton
                    android:id="@+id/stats"
                    android:layout_height="42dp"
                    android:layout_width="42dp"
                    android:background="@drawable/stats"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="4dp"
                    android:contentDescription="@string/stats"/>

                <ImageButton
                    android:id="@+id/viewSwitcher"
                    android:layout_height="42dp"
                    android:layout_width="42dp"
                    android:background="@drawable/map_view"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="4dp"
                    android:contentDescription="@string/switch_view"/>

                <ImageButton
                    android:id="@+id/openChatInput"
                    android:src="@drawable/open_chat_input"
                    android:layout_height="42dp"
                    android:layout_width="42dp"
                    android:background="@drawable/el_widget_skin"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="4dp"
                    android:contentDescription="@string/open_chat" />
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>